tests/fails.rs
use ratatui_macros::constraints;

fn test() {
  // constraints![== 3, == 4; 10];
}
